--- a/0x04-TypeScript/task_1/package.json
+++ b/0x04-TypeScript/task_1/package.json
@@ -7,11 +7,11 @@
     "test": "jest"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.25",
+    "jest": "^24.9.0",
+    "ts-loader": "^9.5.0",
     "typescript": "^5.2.2",
     "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4",
-    "ts-loader": "^9.5.0",
-    "jest": "^24.9.0",
-    "@types/jest": "^24.0.25"
+    "webpack-cli": "^5.1.4"
   }
 }
